--- a/Style.css
+++ b/Style.css
@@ -1,177 +1,422 @@
-/*######## Defaults #########*/
-nav, header, footer{
-  display: block;
-}
+/* Large Devices, Wide Screens */
+   @media only screen and (min-width : 1200px) {
 
-body{
-  line-height: 1;
-  margin: 0;
-}
+     /*######## Defaults #########*/
+     nav, header, footer{
+       display: block;
+     }
 
-label{
-  font-size: 35px;
-  font-weight: 600;
-}
+     body{
+       line-height: 1;
+       margin: 0;
+     }
 
-p{
-  font-size: 28px;
-  line-height: 1.2;
-}
-.container{
-  width: 100%;
-  margin: auto;
-  padding-top: 4%;
-  padding-bottom: 4%;
-}
+     label{
+       font-size: 35px;
+       font-weight: 600;
+     }
 
-.row{
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-}
+     p{
+       font-size: 25px;
+       line-height: 1.2;
+     }
 
-.row::after{
-  display: table;
-  clear: both;
-  content: "";
-}
+     article p{
+       font-size: 30px;
+       padding: 20px;
+     }
 
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
+     .container{
+       width: 100%;
+       margin: auto;
+       padding-top: 4%;
+       padding-bottom: 4%;
+     }
 
-*{
-  box-sizing: border-box;
-}
+     .row{
+       width: 100%;
+       display: flex;
+       flex-wrap: wrap;
+       align-items: center;
+     }
 
-/*######## Nav bar ########*/
-nav{
-  width: 100%;
-  margin: 0;
-}
+     .row::after{
+       display: table;
+       clear: both;
+       content: "";
+     }
 
-nav ul{
-  background-color: #eee;
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-}
+     .col-1 {width: 8.33%;}
+     .col-2 {width: 16.66%;}
+     .col-3 {width: 25%;}
+     .col-4 {width: 33.33%;}
+     .col-5 {width: 41.66%;}
+     .col-6 {width: 50%;}
+     .col-7 {width: 58.33%;}
+     .col-8 {width: 66.66%;}
+     .col-9 {width: 75%;}
+     .col-10 {width: 83.33%;}
+     .col-11 {width: 91.66%;}
+     .col-12 {width: 100%;}
 
-.topNav li{
-  list-style: none;
-  float: left;
-}
+     *{
+       box-sizing: border-box;
+     }
 
-.topNav .topNav-right{
-  float: right;
-}
+     /*######## Nav bar ########*/
+     nav{
+       width: 100%;
+       margin: 0;
+     }
 
-.topNav li a{
-  display: block;
-  text-decoration: none;
-  min-height: 16px;
-  text-align: center;
-  padding: 8px;
-  text-transform: uppercase;
-  color: #666;
-}
+     nav ul{
+       background-color: #eee;
+       overflow: hidden;
+       margin: 0;
+       padding: 0;
+     }
 
-.topNav li a:hover{
-  background-color: #64B5F6;
-  color: #FFFFFF;
-}
+     .topNav li{
+       list-style: none;
+       float: left;
+     }
 
-.topNav li.dropDownIcon{
-  display: none;
-}
+     .topNav .topNav-right{
+       float: right;
+     }
 
-/*############ Custome styles #############*/
-#section1Gradient{
-  background: linear-gradient(#2196F3,#90CAF9);
-}
+     .topNav li a{
+       display: block;
+       text-decoration: none;
+       min-height: 16px;
+       text-align: center;
+       padding: 8px;
+       text-transform: uppercase;
+       color: #666;
+     }
 
-.box{
-  text-align: center;
-  margin: 24px;
-  padding: 36px 24px 40px 24px;
-  border-radius: 8px;
-  background-color: #ffffff;
-  box-shadow: 0 0 0 1px rgba(0,0,0,.15), 0 2px 3px 0 rgba(0,0,0,1);
-}
+     .topNav li a:hover{
+       background-color: #64B5F6;
+       color: #FFFFFF;
+     }
 
-button{
-  font-size: 36px;
-  font-weight: 700;
-  color: #ffffff;
-  background-color: #42A5F5;
-  padding: 15px 60px;
-  display: block;
-  text-align: center;
-  margin: 5px;
-  border-radius: 8px;
-}
+     .topNav li.dropDownIcon{
+       display: none;
+     }
 
-.learnMore{
-  display: block;
-  margin: auto;
-}
+     /*############ Custome styles #############*/
+     #section1Gradient{
+       background: linear-gradient(#2196F3,#90CAF9);
+     }
 
-.icon{
-  width: 100%;
-}
+     .box{
+       text-align: center;
+       margin: 24px;
+       padding: 36px 24px 40px 24px;
+       border-radius: 8px;
+       background-color: #ffffff;
 
-.leftSide-col{
-  margin-left: 30%;
-}
+       /*Horizontal , vertical length, blur, spread rgba(shadow, BG color,Box color, Opacity)*/
+       box-shadow: 0 0 0 1px rgba(0,0,0,.15), 0 2px 3px 0 rgba(0,0,0,1);
+     }
 
-.rightside-col{
-  margin-left: 15%;
-}
-/* h1 styles*/
-.larger{
-  color: #ffffff;
-  font-size: 4rem;
-  margin: 0;
-  line-height: 4.2rem;
-}
+     .Section3Icon img{
+       display: block;
+       width: 500px;
+       height: 300px;
+       margin: auto;
+       box-shadow: -2px -2px 25px 2px rgba(0,0,0,.15), 2px 2px 17px 2px rgba(0,0,0,.1);
+     }
 
-.larger2{
-  color: #ffffff;
-  font-size: 2rem;
-  margin: 0;
-  line-height: 2.2rem;
-}
+     button{
+       font-size: 36px;
+       font-weight: 700;
+       color: #ffffff;
+       background-color: #42A5F5;
+       padding: 15px 60px;
+       display: block;
+       text-align: center;
+       margin: 5px;
+       border-radius: 8px;
+     }
 
-.section2Header{
-  font-size: 60px;
-  text-align: center;
-}
-/*------ The End---------*/
-form h2{
-  color: #ffffff;
-}
+     .learnMore{
+       display: block;
+       margin: auto;
+     }
 
-input[type="text"]{
-  font-size: 20px;
-  width: 400px;
-  min-width: 100px;
-  padding: 5px;
-  border-radius: 8px;
-}
+     .icon{
+       width: 100%;
+     }
+
+     .leftSide-col{
+       margin-left: 30%;
+     }
+
+     .rightside-col{
+       margin-left: 15%;
+     }
+     /* h1 styles*/
+     .larger{
+       color: #ffffff;
+       font-size: 4rem;
+       margin: 0;
+       line-height: 4.2rem;
+     }
+
+     .larger2{
+       color: #ffffff;
+       font-size: 2rem;
+       margin: 0;
+       line-height: 2.2rem;
+     }
+
+     .section2Header{
+       font-size: 60px;
+       text-align: center;
+     }
+     /*------ The End---------*/
+     form h2{
+       color: #ffffff;
+     }
+
+     input[type="text"]{
+       font-size: 20px;
+       width: 400px;
+       min-width: 100px;
+       padding: 5px;
+       border-radius: 8px;
+     }
+
+     .ftr{
+       background-color: #424242;
+       padding-left: 10%;
+     }
+     .ftr h1{
+       color: #ffffff;
+       font-size: 32px;
+     }
+     .ftr ul{
+       list-style: none;
+       text-align: left;
+       padding-left: 0;
+     }
+     .ftr ul li{
+       color: #ffffff;
+       font-size: 20px;
+       line-height: 1.2;
+     }
+   }
 
 
 /*######### Mobile style ########*/
-@media screen and (max-width: 680px) {
+@media only screen and (max-width: 640px) {
+
+  /*######## Defaults #########*/
+  nav, header, footer{
+    display: block;
+  }
+
+  body{
+    line-height: 1;
+    margin: 0;
+  }
+
+  label{
+    font-size: 35px;
+    font-weight: 600;
+  }
+
+  p{
+    font-size: 25px;
+    line-height: 1.2;
+  }
+
+  article p{
+    font-size: 30px;
+    padding: 20px;
+  }
+
+  .container{
+    width: 100%;
+    margin: auto;
+    padding-top: 4%;
+    padding-bottom: 4%;
+  }
+
+  .row{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
+  .row::after{
+    display: table;
+    clear: both;
+    content: "";
+  }
+
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+
+  *{
+    box-sizing: border-box;
+  }
+
+  /*######## Nav bar ########*/
+  nav{
+    width: 100%;
+    margin: 0;
+  }
+
+  nav ul{
+    background-color: #eee;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+  }
+
+  .topNav li{
+    list-style: none;
+    float: left;
+  }
+
+  .topNav .topNav-right{
+    float: right;
+  }
+
+  .topNav li a{
+    display: block;
+    text-decoration: none;
+    min-height: 16px;
+    text-align: center;
+    padding: 8px;
+    text-transform: uppercase;
+    color: #666;
+  }
+
+  .topNav li a:hover{
+    background-color: #64B5F6;
+    color: #FFFFFF;
+  }
+
+  .topNav li.dropDownIcon{
+    display: none;
+  }
+
+  /*############ Custome styles #############*/
+  #section1Gradient{
+    background: linear-gradient(#2196F3,#90CAF9);
+  }
+
+  .box{
+    text-align: center;
+    margin: 24px;
+    padding: 36px 24px 40px 24px;
+    border-radius: 8px;
+    background-color: #ffffff;
+
+    /*Horizontal , vertical length, blur, spread rgba(shadow, BG color,Box color, Opacity)*/
+    box-shadow: 0 0 0 1px rgba(0,0,0,.15), 0 2px 3px 0 rgba(0,0,0,1);
+  }
+
+  .Section3Icon img{
+    display: block;
+    width: 500px;
+    height: 300px;
+    margin: auto;
+    box-shadow: -2px -2px 25px 2px rgba(0,0,0,.15), 2px 2px 17px 2px rgba(0,0,0,.1);
+  }
+
+  button{
+    font-size: 36px;
+    font-weight: 700;
+    color: #ffffff;
+    background-color: #42A5F5;
+    padding: 15px 60px;
+    display: block;
+    text-align: center;
+    margin: 5px;
+    border-radius: 8px;
+  }
+
+  .learnMore{
+    display: block;
+    margin: auto;
+  }
+
+  .icon{
+    width: 100%;
+  }
+
+  .leftSide-col{
+    margin-left: 30%;
+  }
+
+  .rightside-col{
+    margin-left: 15%;
+  }
+  /* h1 styles*/
+  .larger{
+    color: #ffffff;
+    font-size: 4rem;
+    margin: 0;
+    line-height: 4.2rem;
+  }
+
+  .larger2{
+    color: #ffffff;
+    font-size: 2rem;
+    margin: 0;
+    line-height: 2.2rem;
+  }
+
+  .section2Header{
+    font-size: 60px;
+    text-align: center;
+  }
+  /*------ The End---------*/
+  form h2{
+    color: #ffffff;
+  }
+
+  input[type="text"]{
+    font-size: 20px;
+    width: 400px;
+    min-width: 100px;
+    padding: 5px;
+    border-radius: 8px;
+  }
+
+  .ftr{
+    background-color: #424242;
+    padding-left: 10%;
+  }
+  .ftr h1{
+    color: #ffffff;
+    font-size: 32px;
+  }
+  .ftr ul{
+    list-style: none;
+    text-align: left;
+    padding-left: 0;
+  }
+  .ftr ul li{
+    color: #ffffff;
+    font-size: 20px;
+    line-height: 1.2;
+  }
   .topNav li:not(:nth-child(1)){
     display: none;
   }
@@ -202,14 +447,32 @@ input[type="text"]{
     font-size: 50px;
   }
 
-  .col-6, .col-4{
+  article p{
+    font=size: 25px
+  }
+
+  .col-6, .col-4, .col-7, .col-5{
     width: 100%;
     margin: 0;
+  }
+
+  .miniStack{
+    width: 50%;
+    display: block;
   }
 
   div.box{
     padding: 5px;
     display: block;
+  }
+
+  div.Section3Icon{
+    margin: 10px;
+  }
+
+  div.Section3Icon img{
+    width: 100%;
+    margin: 10px;
   }
 
   div.leftSide-col, div.rightside-col{
