--- a/Style.css
+++ b/Style.css
@@ -1,422 +1,210 @@
-/* Large Devices, Wide Screens */
-   @media only screen and (min-width : 1200px) {
+/*######## Defaults #########*/
+nav, header, footer{
+  display: block;
+}
 
-     /*######## Defaults #########*/
-     nav, header, footer{
-       display: block;
-     }
+body{
+  line-height: 1;
+  margin: 0;
+}
 
-     body{
-       line-height: 1;
-       margin: 0;
-     }
+label{
+  font-size: 35px;
+  font-weight: 600;
+}
 
-     label{
-       font-size: 35px;
-       font-weight: 600;
-     }
+p{
+  font-size: 25px;
+  line-height: 1.2;
+}
 
-     p{
-       font-size: 25px;
-       line-height: 1.2;
-     }
+article p{
+  font-size: 30px;
+  padding: 20px;
+}
 
-     article p{
-       font-size: 30px;
-       padding: 20px;
-     }
+.container{
+  width: 100%;
+  margin: auto;
+  padding-top: 4%;
+  padding-bottom: 4%;
+}
 
-     .container{
-       width: 100%;
-       margin: auto;
-       padding-top: 4%;
-       padding-bottom: 4%;
-     }
+.row{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
 
-     .row{
-       width: 100%;
-       display: flex;
-       flex-wrap: wrap;
-       align-items: center;
-     }
+.row::after{
+  display: table;
+  clear: both;
+  content: "";
+}
 
-     .row::after{
-       display: table;
-       clear: both;
-       content: "";
-     }
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
 
-     .col-1 {width: 8.33%;}
-     .col-2 {width: 16.66%;}
-     .col-3 {width: 25%;}
-     .col-4 {width: 33.33%;}
-     .col-5 {width: 41.66%;}
-     .col-6 {width: 50%;}
-     .col-7 {width: 58.33%;}
-     .col-8 {width: 66.66%;}
-     .col-9 {width: 75%;}
-     .col-10 {width: 83.33%;}
-     .col-11 {width: 91.66%;}
-     .col-12 {width: 100%;}
+*{
+  box-sizing: border-box;
+}
 
-     *{
-       box-sizing: border-box;
-     }
+/*######## Nav bar ########*/
+nav{
+  width: 100%;
+  margin: 0;
+}
 
-     /*######## Nav bar ########*/
-     nav{
-       width: 100%;
-       margin: 0;
-     }
+nav ul{
+  background-color: #eee;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
 
-     nav ul{
-       background-color: #eee;
-       overflow: hidden;
-       margin: 0;
-       padding: 0;
-     }
+.topNav li{
+  list-style: none;
+  float: left;
+}
 
-     .topNav li{
-       list-style: none;
-       float: left;
-     }
+.topNav .topNav-right{
+  float: right;
+}
 
-     .topNav .topNav-right{
-       float: right;
-     }
+.topNav li a{
+  display: block;
+  text-decoration: none;
+  min-height: 16px;
+  text-align: center;
+  padding: 8px;
+  text-transform: uppercase;
+  color: #666;
+}
 
-     .topNav li a{
-       display: block;
-       text-decoration: none;
-       min-height: 16px;
-       text-align: center;
-       padding: 8px;
-       text-transform: uppercase;
-       color: #666;
-     }
+.topNav li a:hover{
+  background-color: #64B5F6;
+  color: #FFFFFF;
+}
 
-     .topNav li a:hover{
-       background-color: #64B5F6;
-       color: #FFFFFF;
-     }
+.topNav li.dropDownIcon{
+  display: none;
+}
 
-     .topNav li.dropDownIcon{
-       display: none;
-     }
+/*############ Custome styles #############*/
+#section1Gradient{
+  background: linear-gradient(#2196F3,#90CAF9);
+}
 
-     /*############ Custome styles #############*/
-     #section1Gradient{
-       background: linear-gradient(#2196F3,#90CAF9);
-     }
+.box{
+  text-align: center;
+  margin: 24px;
+  padding: 36px 24px 40px 24px;
+  border-radius: 8px;
+  background-color: #ffffff;
 
-     .box{
-       text-align: center;
-       margin: 24px;
-       padding: 36px 24px 40px 24px;
-       border-radius: 8px;
-       background-color: #ffffff;
+  /*Horizontal , vertical length, blur, spread rgba(shadow, BG color,Box color, Opacity)*/
+  box-shadow: 0 0 0 1px rgba(0,0,0,.15), 0 2px 3px 0 rgba(0,0,0,1);
+}
 
-       /*Horizontal , vertical length, blur, spread rgba(shadow, BG color,Box color, Opacity)*/
-       box-shadow: 0 0 0 1px rgba(0,0,0,.15), 0 2px 3px 0 rgba(0,0,0,1);
-     }
+.Section3Icon img{
+  display: block;
+  width: 500px;
+  height: 300px;
+  margin: auto;
+  box-shadow: -2px -2px 25px 2px rgba(0,0,0,.15), 2px 2px 17px 2px rgba(0,0,0,.1);
+}
 
-     .Section3Icon img{
-       display: block;
-       width: 500px;
-       height: 300px;
-       margin: auto;
-       box-shadow: -2px -2px 25px 2px rgba(0,0,0,.15), 2px 2px 17px 2px rgba(0,0,0,.1);
-     }
+button{
+  font-size: 36px;
+  font-weight: 700;
+  color: #ffffff;
+  background-color: #42A5F5;
+  padding: 15px 60px;
+  display: block;
+  text-align: center;
+  margin: 5px;
+  border-radius: 8px;
+}
 
-     button{
-       font-size: 36px;
-       font-weight: 700;
-       color: #ffffff;
-       background-color: #42A5F5;
-       padding: 15px 60px;
-       display: block;
-       text-align: center;
-       margin: 5px;
-       border-radius: 8px;
-     }
+.learnMore{
+  display: block;
+  margin: auto;
+}
 
-     .learnMore{
-       display: block;
-       margin: auto;
-     }
+.icon{
+  width: 100%;
+}
 
-     .icon{
-       width: 100%;
-     }
+.leftSide-col{
+  margin-left: 30%;
+}
 
-     .leftSide-col{
-       margin-left: 30%;
-     }
+.rightside-col{
+  margin-left: 15%;
+}
+/* h1 styles*/
+.larger{
+  color: #ffffff;
+  font-size: 4rem;
+  margin: 0;
+  line-height: 4.2rem;
+}
 
-     .rightside-col{
-       margin-left: 15%;
-     }
-     /* h1 styles*/
-     .larger{
-       color: #ffffff;
-       font-size: 4rem;
-       margin: 0;
-       line-height: 4.2rem;
-     }
+.larger2{
+  color: #ffffff;
+  font-size: 2rem;
+  margin: 0;
+  line-height: 2.2rem;
+}
 
-     .larger2{
-       color: #ffffff;
-       font-size: 2rem;
-       margin: 0;
-       line-height: 2.2rem;
-     }
+.section2Header{
+  font-size: 60px;
+  text-align: center;
+}
+/*------ The End---------*/
+form h2{
+  color: #ffffff;
+}
 
-     .section2Header{
-       font-size: 60px;
-       text-align: center;
-     }
-     /*------ The End---------*/
-     form h2{
-       color: #ffffff;
-     }
+input[type="text"]{
+  font-size: 20px;
+  width: 400px;
+  min-width: 100px;
+  padding: 5px;
+  border-radius: 8px;
+}
 
-     input[type="text"]{
-       font-size: 20px;
-       width: 400px;
-       min-width: 100px;
-       padding: 5px;
-       border-radius: 8px;
-     }
-
-     .ftr{
-       background-color: #424242;
-       padding-left: 10%;
-     }
-     .ftr h1{
-       color: #ffffff;
-       font-size: 32px;
-     }
-     .ftr ul{
-       list-style: none;
-       text-align: left;
-       padding-left: 0;
-     }
-     .ftr ul li{
-       color: #ffffff;
-       font-size: 20px;
-       line-height: 1.2;
-     }
-   }
-
-
+.ftr{
+  background-color: #424242;
+  padding-left: 10%;
+}
+.ftr h1{
+  color: #ffffff;
+  font-size: 32px;
+}
+.ftr ul{
+  list-style: none;
+  text-align: left;
+  padding-left: 0;
+}
+.ftr ul li{
+  color: #ffffff;
+  font-size: 20px;
+  line-height: 1.2;
+}
 /*######### Mobile style ########*/
-@media only screen and (max-width: 640px) {
-
-  /*######## Defaults #########*/
-  nav, header, footer{
-    display: block;
-  }
-
-  body{
-    line-height: 1;
-    margin: 0;
-  }
-
-  label{
-    font-size: 35px;
-    font-weight: 600;
-  }
-
-  p{
-    font-size: 25px;
-    line-height: 1.2;
-  }
-
-  article p{
-    font-size: 30px;
-    padding: 20px;
-  }
-
-  .container{
-    width: 100%;
-    margin: auto;
-    padding-top: 4%;
-    padding-bottom: 4%;
-  }
-
-  .row{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-  }
-
-  .row::after{
-    display: table;
-    clear: both;
-    content: "";
-  }
-
-  .col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
-
-  *{
-    box-sizing: border-box;
-  }
-
-  /*######## Nav bar ########*/
-  nav{
-    width: 100%;
-    margin: 0;
-  }
-
-  nav ul{
-    background-color: #eee;
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
-  }
-
-  .topNav li{
-    list-style: none;
-    float: left;
-  }
-
-  .topNav .topNav-right{
-    float: right;
-  }
-
-  .topNav li a{
-    display: block;
-    text-decoration: none;
-    min-height: 16px;
-    text-align: center;
-    padding: 8px;
-    text-transform: uppercase;
-    color: #666;
-  }
-
-  .topNav li a:hover{
-    background-color: #64B5F6;
-    color: #FFFFFF;
-  }
-
-  .topNav li.dropDownIcon{
-    display: none;
-  }
-
-  /*############ Custome styles #############*/
-  #section1Gradient{
-    background: linear-gradient(#2196F3,#90CAF9);
-  }
-
-  .box{
-    text-align: center;
-    margin: 24px;
-    padding: 36px 24px 40px 24px;
-    border-radius: 8px;
-    background-color: #ffffff;
-
-    /*Horizontal , vertical length, blur, spread rgba(shadow, BG color,Box color, Opacity)*/
-    box-shadow: 0 0 0 1px rgba(0,0,0,.15), 0 2px 3px 0 rgba(0,0,0,1);
-  }
-
-  .Section3Icon img{
-    display: block;
-    width: 500px;
-    height: 300px;
-    margin: auto;
-    box-shadow: -2px -2px 25px 2px rgba(0,0,0,.15), 2px 2px 17px 2px rgba(0,0,0,.1);
-  }
-
-  button{
-    font-size: 36px;
-    font-weight: 700;
-    color: #ffffff;
-    background-color: #42A5F5;
-    padding: 15px 60px;
-    display: block;
-    text-align: center;
-    margin: 5px;
-    border-radius: 8px;
-  }
-
-  .learnMore{
-    display: block;
-    margin: auto;
-  }
-
-  .icon{
-    width: 100%;
-  }
-
-  .leftSide-col{
-    margin-left: 30%;
-  }
-
-  .rightside-col{
-    margin-left: 15%;
-  }
-  /* h1 styles*/
-  .larger{
-    color: #ffffff;
-    font-size: 4rem;
-    margin: 0;
-    line-height: 4.2rem;
-  }
-
-  .larger2{
-    color: #ffffff;
-    font-size: 2rem;
-    margin: 0;
-    line-height: 2.2rem;
-  }
-
-  .section2Header{
-    font-size: 60px;
-    text-align: center;
-  }
-  /*------ The End---------*/
-  form h2{
-    color: #ffffff;
-  }
-
-  input[type="text"]{
-    font-size: 20px;
-    width: 400px;
-    min-width: 100px;
-    padding: 5px;
-    border-radius: 8px;
-  }
-
-  .ftr{
-    background-color: #424242;
-    padding-left: 10%;
-  }
-  .ftr h1{
-    color: #ffffff;
-    font-size: 32px;
-  }
-  .ftr ul{
-    list-style: none;
-    text-align: left;
-    padding-left: 0;
-  }
-  .ftr ul li{
-    color: #ffffff;
-    font-size: 20px;
-    line-height: 1.2;
-  }
+@media only screen and (max-aspect-ratio: 13/10){
   .topNav li:not(:nth-child(1)){
     display: none;
   }
