--- a/Style.css
+++ b/Style.css
@@ -6,6 +6,7 @@ nav, header, footer{
 body{
   line-height: 1;
   margin: 0;
+  background-color: #E3F2FD;
 }
 
 label{
@@ -203,8 +204,10 @@ input[type="text"]{
   font-size: 20px;
   line-height: 1.2;
 }
+
+
 /*######### Mobile style ########*/
-@media only screen and (max-aspect-ratio: 9/10){
+@media only screen and (max-aspect-ratio: 12/10){
   .topNav li:not(:nth-child(1)){
     display: none;
   }
@@ -219,24 +222,47 @@ input[type="text"]{
     right: 0;
   }
 
+  ul.topNav li a{
+    font-size: 2.5rem;
+  }
+
   ul.topNav.responsive{
     position: relative;
   }
+
   ul.topNav.responsive li{
     display: inline;
     float: none;
   }
+
   ul.topNav.responsive li a{
     display: block;
     text-align: left;
+    font-size: 2.5rem;
   }
 
   h1.section2Header{
-    font-size: 50px;
+    font-size: 3.3rem;
   }
 
   article p{
-    font=size: 25px
+    font-size: 1.8rem;
+  }
+
+  div.box p{
+    font-size: 2rem;
+  }
+  div.box label{
+    font-size: 2.4rem;
+  }
+
+  .firstCol{
+    text-align: center;
+  }
+
+  .boxContainer{
+    padding-left: 1.7rem;
+    padding-right: 1.7rem;
   }
 
   .col-6, .col-4, .col-7, .col-5{
@@ -250,29 +276,35 @@ input[type="text"]{
   }
 
   div.box{
-    padding: 5px;
+    padding: .4rem;
     display: block;
   }
 
   div.Section3Icon{
-    margin: 10px;
+    margin: .8rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   div.Section3Icon img{
     width: 100%;
-    margin: 10px;
+    margin: .8rem;
   }
 
   div.leftSide-col, div.rightside-col{
-    margin: 15px;
+    margin: 1rem;
   }
+
   input[type="text"]{
-    width:350px;
+    width: 22rem;
   }
+
   .videoContainer iframe{
     position: relative;
     width: 100%;
     margin: 0;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
     overflow: hidden;
   }
 }
